k8s/base/services/cyberchef/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cyberchef
  namespace: cyberchef
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cyberchef
  template:
    metadata:
      labels:
        app: cyberchef
    spec:
      containers:
      - name: cyberchef
        image: mpepping/cyberchef:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"
