k8s/base/services/cyberchef/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cyberchef
  namespace: cyberchef
spec:
  selector:
    app: cyberchef
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
