k8s/base/services/cyberchef/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cyberchef
  namespace: cyberchef
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cyberchef.loeffelmeister.de`)
      kind: Rule
      services:
        - name: cyberchef
          port: 8000
      middlewares:
        - name: keycloak-forward-auth
          namespace: forward-auth
